@@ -482,7 +482,6 @@ typedef struct TkDisplay {
     Window warpWindow;
     int warpX;
     int warpY;
-    int useInputMethods;	/* Whether to use input methods */
 
     /*
      * The following field(s) were all added for Tk8.4
@@ -496,13 +495,18 @@ typedef struct TkDisplay {
  * Flag values for TkDisplay flags.
  *  TK_DISPLAY_COLLAPSE_MOTION_EVENTS:	(default on)
  *	Indicates that we should collapse motion events on this display
+ *  TK_DISPLAY_USE_IM:			(default on)
+ *	Whether to use input methods for this display
  *  TK_DISPLAY_XIM_SPOT:		(default off)
  *	Indicates that we should use over-the-spot XIM on this display
+ *  TK_DISPLAY_WM_TRACING:		(default off)
+ *	Whether we should do wm tracing on this display.
  */
 
 #define TK_DISPLAY_COLLAPSE_MOTION_EVENTS	(1 << 0)
-#define TK_DISPLAY_XIM_SPOT			(1 << 1)
-#define TK_DISPLAY_WM_TRACING			(1 << 2)
+#define TK_DISPLAY_USE_IM			(1 << 1)
+#define TK_DISPLAY_XIM_SPOT			(1 << 2)
+#define TK_DISPLAY_WM_TRACING			(1 << 3)
 
 /*
  * One of the following structures exists for each error handler
